# karpathy-microgpt-by-Enock

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  QUICKSTART.md  README.md  TODO.md  __init__.py  ab_testing.py  advanced_features.py  advanced_training.py  agents.py  api_server.py  auto_ml.py  benchmark.py  benchmark_suite.py  bio_inspired.py  chat.py  checkpoint.py  cli.py  compression.py  config.py  config.yaml  config_validator.py  data.py  data_pipeline.py  deployment_guide.py  distributed.py  docker-compose.yml  evaluation.py  experiment_tracker.py  export.py  feature_store.py  finetune.py  fix_linting.py  flake8_report.txt  fractal_network.py  hrm_adapter.py  hrm_enhanced.py  hyperparameter_tuner.py  (+44 more)
.github/workflows/: release.yml  tests.yml
docs/: CONTRIBUTING.md  GUIDE.md  TODO.md
docs/summaries/: COMPREHENSIVE_ANALYSIS.md  ECOSYSTEM.md  ECOSYSTEM_SUMMARY.md  ENHANCED_INTEGRATIONS_SUMMARY.md  FINAL_COMPLETE_SUMMARY.md  FINAL_SUMMARY.md  FINAL_ULTIMATE_COMPLETE.md  HRM_INTEGRATION_SUMMARY.md  IMPORT_FIXES_SUMMARY.md  MASTER_INDEX.md  NO_MANS_SKY_MANDELBROT_SUMMARY.md  OPENCLAW_INTEGRATION_SUMMARY.md  PROJECT_SUMMARY.md  ULTIMATE_OMNI_SUMMARY.md  ULTIMATE_SUMMARY.md
examples/: 01_basic_training.py  02_advanced_generation.py  03_model_zoo.py  04_quantization.py  05_interpretability.py  06_export_formats.py  07_openclaw_integration.py  08_hrm_integration.py  09_complete_workflow.py  README.md
logs/: demo.jsonl
microgpt/: __init__.py  ab_testing.py  advanced_features.py  advanced_training.py  agents.py  api_server.py  auto_ml.py  benchmark.py  benchmark_suite.py  bio_inspired.py  chat.py  checkpoint.py  cli.py  compression.py  config.py  config_validator.py  data.py  data_pipeline.py  deployment_guide.py  distributed.py  evaluation.py  experiment_tracker.py  export.py  feature_store.py  finetune.py  fractal_network.py  hrm_adapter.py  hrm_enhanced.py  hyperparameter_tuner.py  inference_optimizations.py  interpretability.py  logger.py  memory_efficient.py  microgpt.py  microgpt_hrm_integration.py  microgpt_openclaw_integration.py  model.py  model_analyzer.py  model_comparison.py  model_merging.py  (+28 more)
tests/: test_advanced.py  test_model.py  test_training.py
